@@ -10,6 +10,7 @@
  - Fix metacharacter escaping in headings, contents, and navbar.
  - Fix handling of =for thread and =begin thread.
  - Fix non-breaking spaces in navbar section names.
+ - Stop wrapping output text.
  - Output the document before erroring out if POD errors were seen.
  - Suppress \signature if the input document was empty.
  - Add bugtracker, homepage, and repository package metadata.
